Jenkins file updated

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
     stages{
         stage ('Complie stage'){
             steps{
-                withMaven(maven : 'maven3){ 
+                withMaven(maven : 'maven3'){ 
                     sh 'mvn clean complie'
                 }
             }
