--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,10 +2,10 @@ pipeline{
     agent any
 
     stages{
-        stage ('Complie stage'){
-            steps{
+        stage ('Complie Stage'){
+            steps {
                 withMaven(maven : 'maven3'){ 
-                    sh 'mvn clean complie'
+                    sh 'mvn clean compile'
                 }
             }
         }
