--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ pipeline{
             steps {
                 sh '''#!/bin/bash
                        echo "hello world"
-                       python3 --version
+                       python3 -c "print(json.dumps({**dict(Counter(map(lambda x : str(x.firstChild.nodeValue).split(" ")[0],xml.dom.minidom.parse("dependency-check-report.xml").getElementsByTagName("severity")))),**{"AppName":"Hackathon"}}))"
                    '''
             }
         }
