--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,6 +23,7 @@ pipeline{
                 sh '''#!/bin/bash
                        echo "hello world"
                        DependencyCheck=$(python3 -c 'import xml.dom.minidom;from collections import Counter;import json;print(json.dumps({**dict(Counter(map(lambda x : str(x.firstChild.nodeValue).split(" ")[0],xml.dom.minidom.parse("dependency-check-report.xml").getElementsByTagName("severity")))),**{"AppName":"Hackathon"}}))')
+                       echo $DependencyCheck
                        #python3 -c "import xml.dom.minidom;from collections import Counter;import json;print(json.dumps({**dict(Counter(map(lambda x : str(x.firstChild.nodeValue).split(' ')[0],xml.dom.minidom.parse('dependency-check-report.xml').getElementsByTagName('severity')))),**{'AppName':'Hackathon'}}))"
                    '''
             }
